# tauri

./: Cargo.toml
core/tauri-runtime-wry/src/: lib.rs
core/tauri-runtime/src/: lib.rs
core/tauri/src/: app.rs
examples/test-macos-bundler/: Info.plist
examples/test-macos-bundler/src-tauri/: Cargo.toml  tauri.conf.json
examples/test-macos-bundler/src-tauri/base.lproj/: InfoPlist.strings
examples/test-macos-bundler/src-tauri/zh-Hant.lproj/: InfoPlist.strings
