[package]
name = "test_app_name"
version = "0.1.0"
description = "A Tauri application test macos bundler name"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { path = "../../../core/tauri-build", features = ["codegen"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { path = "../../../core/tauri", features = ["shell-execute"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
